--- a/dream_sort_fe/package.json
+++ b/dream_sort_fe/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
     "dream_sort": "file:",
+    "orbit-space": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^4.0.14"
