--- a/dream_sort_fe/package.json
+++ b/dream_sort_fe/package.json
@@ -11,12 +11,19 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
+    "@tsparticles/react": "^3.0.0",
+    "@types/three": "^0.174.0",
     "dream_sort": "file:",
-    "orbit-space": "^1.1.0",
+    "lamina": "^1.1.23",
+    "maath": "^0.10.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.0.14"
+    "react-particles": "^2.12.2",
+    "tailwindcss": "^4.0.14",
+    "three": "^0.174.0",
+    "tsparticles": "^3.8.1",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
