--- a/dream_sort_fe/package.json
+++ b/dream_sort_fe/package.json
@@ -15,6 +15,7 @@
     "orbit-space": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
