--- a/dream_sort_fe/package.json
+++ b/dream_sort_fe/package.json
@@ -16,9 +16,11 @@
     "dream_sort": "file:",
     "lamina": "^1.1.23",
     "maath": "^0.10.8",
+    "motion": "^12.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-particles": "^2.12.2",
+    "react-router-dom": "^7.3.0",
     "tailwindcss": "^4.0.14",
     "three": "^0.174.0",
     "tsparticles": "^3.8.1",
