--- a/dream_sort_fe/package.json
+++ b/dream_sort_fe/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-particles": "^2.12.2",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.14",
     "three": "^0.174.0",
     "tsparticles": "^3.8.1",
